--- a/BlazorBrandstof/Components/Pages/Home.razor
+++ b/BlazorBrandstof/Components/Pages/Home.razor
@@ -2,6 +2,19 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<div class="container text-center">
+    <div class="row">
+        <div class="col">
+            Column
+        </div>
+        <div class="col">
+            Column
+        </div>
+        <div class="col">
+            Column
+        </div>
+        <div class="col">
+            Column
+        </div>
+    </div>
+</div>
