--- a/BlazorBrandstof/Components/Pages/Login.razor
+++ b/BlazorBrandstof/Components/Pages/Login.razor
@@ -1,6 +1,42 @@
 ﻿@page "/"
 <h3>Login</h3>
 
-@code {
+<div>
+    <div class="container login-container">
+        <h2 class="text-center">Login</h2>
+        <form>
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" id="username" placeholder="Enter username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" placeholder="Enter password">
+            </div>
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="remember">
+                <label class="form-check-label" for="remember">Remember me</label>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </form>
+    </div>
+    <div class="container pin-container">
+        <h2 class="text-center">Enter Pin Code</h2>
+        <form>
+            <div class="form-row justify-content-center">
+                <input type="password" class="form-control d-none" id="pin" name="pin" maxlength="4" required>
+                <input type="text" class="form-control pin-input" disabled>
+                <input type="text" class="form-control pin-input" disabled>
+                <input type="text" class="form-control pin-input" disabled>
+                <input type="text" class="form-control pin-input" disabled>
+            </div>
+            <div class="form-group mt-4">
+                <button type="button" class="btn btn-primary btn-block" onclick="focusPinInput()">Enter Pin</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+@code { 
     
 }
