--- a/BlazorBrandstof/Components/Pages/Home.razor
+++ b/BlazorBrandstof/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Home"
+@using BlazorBrandstof.Entities
 @using BlazorBrandstof.Repositories
 
 <PageTitle>Home</PageTitle>
@@ -6,16 +7,29 @@
 <div class="container text-center">
     <div class="row">
         <div class="col">
-            <h2>Bon</h2>
+            <h2>Round</h2>
+            @foreach (var product in products_current_round)
+            {
+                <p>@product.Name @product.Price</p>
+            }
         </div>
         <div class="col">
-            <h2>Warme Dranken</h2>
+            <h2>Warm Drinks</h2>
             @foreach (var product in ProductRepo.GetAll())
             {
                 <div class="col p-1">
-                    <button type="button" class="btn btn-primary btn-lg">@product.Name $@product.Price</button>
+                    <button type="button" class="btn btn-primary btn-lg" @onclick="() => AddToRound(product)">@product.Name $@product.Price</button>
                 </div>
             }
         </div>
     </div>
 </div>
+
+@code {
+    List<Product> products_current_round = new List<Product>();
+
+    private void AddToRound(Product product)
+    {
+        products_current_round.Add(product);
+    }
+}
