--- a/BlazorBrandstof/Components/Pages/Tables.razor
+++ b/BlazorBrandstof/Components/Pages/Tables.razor
@@ -6,15 +6,14 @@
 
 <button class="btn btn-primary" @onclick="() => ModalDialog.Open()">Click me!</button>
 
-<ModalDialog @ref="@ModalDialog" Title="Hello World">
-    <div class="row">
-        <div class="col">
-            @foreach (var table in TableRepo.GetAll())
-            {
-                @table.Name
-            }
-        </div>
-        <button class="btn btn-primary"  @onclick="() => ModalDialog.Close()">Close</button>
+<ModalDialog @ref="@ModalDialog" Title="Tables">
+    <div class="row gap-2">
+        @foreach (var table in TableRepo.GetAll())
+        {
+            <div class="d-grid col-3 mx-auto">
+                <button type="button" class="btn btn-primary btn-lg">@table.Name</button>
+            </div>
+        }
     </div>
 </ModalDialog>
 
