--- a/BlazorBrandstof/Components/Pages/Home.razor
+++ b/BlazorBrandstof/Components/Pages/Home.razor
@@ -18,37 +18,37 @@
 <div class="container text-center">
     <div class="row">
         <div class="col">
+            <h2>Warm Drinks</h2>
+            @foreach (var product in ProductRepo.GetAll())
+            {
+                <div class="col p-1">
+                    <button type="button" class="btn btn-primary btn-lg" @onclick="() => AddToRound(product)">@product.Name $@product.Price</button>
+                </div>
+            }
+        </div>
+        <div class="col">
+            <h2>Cold Drinks</h2>
+            @foreach (var product in ProductRepo.GetAll())
+            {
+                <div class="col p-1">
+                    <button type="button" class="btn btn-primary btn-lg" @onclick="() => AddToRound(product)">@product.Name $@product.Price</button>
+                </div>
+            }
+        </div>
+        <div class="col">
+            <h2>Non-Alcoholic Drinks</h2>
+            @foreach (var product in ProductRepo.GetAll())
+            {
+                <div class="col p-1">
+                    <button type="button" class="btn btn-primary btn-lg" @onclick="() => AddToRound(product)">@product.Name $@product.Price</button>
+                </div>
+            }
+        </div>
+        <div class="col">
             <h2>Round</h2>
             @foreach (var product in CurrentRoundProducts)
             {
-                <p>$@product.Price : @product.Name</p>
-            }
-        </div>
-        <div class="col">
-            <h2>Warme Dranken</h2>
-            @foreach (var product in ProductRepo.GetAll())
-            {
-                <div class="col p-1">
-                    <button type="button" class="btn btn-primary btn-lg" @onclick="() => AddToRound(product)">@product.Name $@product.Price</button>
-                </div>
-            }
-        </div>
-        <div class="col">
-            <h2>Koude Dranken</h2>
-            @foreach (var product in ProductRepo.GetAll())
-            {
-                <div class="col p-1">
-                    <button type="button" class="btn btn-primary btn-lg" @onclick="() => AddToRound(product)">@product.Name $@product.Price</button>
-                </div>
-            }
-        </div>
-        <div class="col">
-            <h2>Alcoholvrije Dranken</h2>
-            @foreach (var product in ProductRepo.GetAll())
-            {
-                <div class="col p-1">
-                    <button type="button" class="btn btn-primary btn-lg" @onclick="() => AddToRound(product)">@product.Name $@product.Price</button>
-                </div>
+            <p>$@product.Price : @product.Name</p>
             }
         </div>
     </div>
