--- a/BlazorBrandstof/Components/ModalDialog.razor
+++ b/BlazorBrandstof/Components/ModalDialog.razor
@@ -3,8 +3,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">@Title</h5>
-                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close" @onclick="Close">
-                </button>
+                @if (CanClose)
+                {
+                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close" @onclick="Close">
+                    </button>
+                }
             </div>
             <div class="modal-body">
                 @ChildContent
@@ -22,6 +25,8 @@
     [Parameter] public string Title { get; set; }
 
     [Parameter] public RenderFragment ChildContent { get; set; }
+
+    [Parameter] public bool CanClose { get; set; } = true;
 
     private string modalDisplay = "none;";
     private string modalClass = string.Empty;
