--- a/BlazorBrandstof/Components/Layout/MainLayout.razor
+++ b/BlazorBrandstof/Components/Layout/MainLayout.razor
@@ -6,9 +6,11 @@
     @* </div> *@
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+        <nav class="navbar navbar-light bg-light justify-content-between">
+            <a class="navbar-brand" href="#">
+                <img src="favicon.svg" width="30" height="30" style="padding-left: 10px" class="d-inline-block align-top" alt="">
+            </a>
+        </nav>
 
         <article class="content px-4">
             @Body
