UserRepo met comments
De UserRepo heeft nu bij elke lijn een comment om het beter te begrijpen

--- a/BlazorBrandstof/Components/Pages/Login.razor
+++ b/BlazorBrandstof/Components/Pages/Login.razor
@@ -62,5 +62,7 @@
     {
         public string? Username { get; set; } // Variable gebruikersnaam wat de gebruiker invoerd.
         public string? Password { get; set; } // Variable wachtwoord wat de gebruiker invoerd
+        
+        // ? betekent dat het NULL kan zijn dus niks kan zijn.
     }
 }
