--- a/BlazorBrandstof/Components/Pages/Home.razor
+++ b/BlazorBrandstof/Components/Pages/Home.razor
@@ -11,7 +11,9 @@
 <p>Served by: @CurrentOrder.WaiterName | Table @CurrentOrder.TableId | Round @CurrentOrder.Rounds.Count | @CurrentOrder.Timestamp.ToShortTimeString()</p>
 }
 
-<button class="btn btn-primary" @onclick="() => TableDialog.Open()">Show Tables</button><br>
+<button class="btn btn-primary" @onclick="() => TableDialog.Open()">Show Tables</button>
+<button class="btn btn-primary" disabled="@(CurrentOrder == null)" @onclick="() => CheckoutDialog.Open()">Checkout</button>
+<br>
 
 <ModalDialog @ref="@TableDialog" Title="Tables" CanClose="false">
     <div class="row gap-2">
@@ -51,23 +53,47 @@
     </div>
 </ModalDialog>
 
-<div class="container text-center">
+<ModalDialog @ref="@CheckoutDialog" Title="Checkout" CanClose="true">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                @if (CurrentOrder != null)
+                {
+                    @foreach (var product in CurrentOrder.TotalProducts)
+                    {
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" disabled="@(CurrentOrder.PaidProducts.Contains(product))" @onchange="eventArgs => { _selectedCheckoutItemsDictionary[product] = (bool)(eventArgs.Value ?? true); }"/>
+                            <label class="form-check-label" for="flexCheckDefault">
+                                @product.Name €@product.Price
+                            </label>
+                        </div>
+                    }
+                    <br>
+                    
+                    <button class="btn btn-primary" @onclick="() => { PayForSelectedItems(_selectedCheckoutItems); }">Checkout (€@(_selectedCheckoutItems.Sum(p => p.Price)))</button>
+                }
+            </div>
+        </div>
+    </div>
+</ModalDialog>
+
+<div class="container-fluid text-center">
     <div class="row">
         @foreach (var category in CategoryRepo.GetAll())
         {
             // maak kolom voor elke categorie
 
-            <div class="col">
+            <div class="col-md-2">
                 <h2>@category.Name</h2>
                 @foreach (var product in category.Products)
                 {
-                    <div class="col p-1">
-                        <button type="button" class="btn btn-primary btn-lg" disabled="@(CurrentOrder == null)" @onclick="() => ShowAddons(product)">@product.Name $@product.Price</button>
-                    </div>
+                <div class="row p-1">
+                    <button type="button" class="btn btn-primary btn-lg" disabled="@(CurrentOrder == null)" @onclick="() => ShowAddons(product)">@product.Name €@product.Price</button>
+                </div>
                 }
             </div>
         }
-        <div class="col">
+        <div class="col-md-2">
             <h2>Round</h2>
             @if (CurrentOrder != null)
             {
@@ -78,14 +104,12 @@
                     var round = CurrentOrder.Rounds[i];
 
                     <p>
-                        <b>Round @(i + 1) -----------</b>
+                        <b>Round @(i+1)</b>
                     </p>
 
                     foreach (var product in round.Products)
                     {
-                        <p>
-                            <b>@product.Name $@product.Price</b>
-                        </p>
+                        <p>@product.Name €@product.Price</p>
 
                         foreach (var addon in product.Addons)
                         {
@@ -100,7 +124,8 @@
 
 @code {
     private ModalDialog TableDialog { get; set; } = null!;
-    public ModalDialog AddonDialog { get; set; } = null!;
+    private ModalDialog AddonDialog { get; set; } = null!;
+    private ModalDialog CheckoutDialog { get; set; } = null!;
 
     private Models.Round? CurrentRound { get; set; }
     private Models.Order? CurrentOrder { get; set; }
@@ -108,6 +133,15 @@
     private Product? CurrentProduct { get; set; }
 
     private readonly Dictionary<string, string> _selectedAddons = new();
+    private readonly Dictionary<Product, bool> _selectedCheckoutItemsDictionary = new();
+
+    private List<Product> _selectedCheckoutItems
+    {
+        get
+        {
+            return _selectedCheckoutItemsDictionary.Where(s => s.Value == true).Select(s => s.Key).ToList();
+        }
+    }
 
     private void SelectAddon(AddonCategory category, Addon addon)
     {
@@ -118,7 +152,7 @@
 
         _selectedAddons.Add(category.Name, addon.Name);
     }
-
+    
     private void ShowAddons(Product product)
     {
         CurrentProduct = product;
@@ -142,7 +176,7 @@
     {
         TableDialog.Close();
 
-        Order? order = OrderRepo.GetAll().FirstOrDefault(o => o.TableId == table.TableId);
+        Order? order = OrderRepo.GetAll().FirstOrDefault(o => o.TableId == table.TableId && o.Status != "Paid");
 
         if (order != null)
         {
@@ -156,6 +190,7 @@
                 Timestamp = DateTime.Now,
                 WaiterName = "Waiter1",
                 TableId = table.TableId,
+                Status = "Busy",
             });
             CurrentRound = null;
         }
@@ -179,4 +214,31 @@
         CurrentOrder.Rounds.Add(CurrentRound!);
     }
 
+    private void PayForSelectedItems(List<Product> selectedItems)
+    {
+        if(CurrentOrder == null) return;
+
+        foreach (var product in selectedItems)
+        {
+            if(!CurrentOrder.PaidProducts.Contains(product))
+                CurrentOrder.PaidProducts.Add(product);
+        }
+
+        var productsLeft = CurrentOrder.TotalProducts.Except(CurrentOrder.PaidProducts).Count();
+
+        if (productsLeft == 0)
+        {
+            CheckoutDialog.Close();
+
+            CurrentOrder.Status = "Paid";
+            OrderRepo.Update(CurrentOrder);
+
+            var oldTableId = CurrentOrder.TableId;
+            CurrentOrder = null;
+
+            var table = TableRepo.GetById(oldTableId);
+            if(table != null)
+                SelectOrCreateOrder(table);
+        }
+    }
 }
